--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,8 +7,8 @@ spring:
     show-sql: 'true'
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
-        hibernate:
-          format_sql: 'true'
+      hibernate:
+        format_sql: 'true'
   h2:
     console:
       path: /h2-console
@@ -17,6 +17,6 @@ spring:
     password: ''
     driver-class-name: org.h2.Driver
     username: sa
-    url: jdbc:h2:file:~/medicalconsult
+    url: jdbc:h2:mem:marcasus
 server:
-    port: ${port:8080}
+  port: ${port:8080}
